--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "next": "15.1.3",
