--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.21.2",
+    "firebase": "^11.2.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "next": "15.1.3",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
