--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "firebase": "^11.2.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-    "next": "15.1.3",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
